--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,41 @@
-version: '3'
+﻿version: '3.8'
+
 services:
-  web:
-    build: .
-    container_name: app_nha_hang
+  backend_ai:
+    # Đặt tên container cho dễ tìm
+    container_name: smartfood_ai_core
+    
+    # Chỉ đường dẫn đến thư mục chứa Dockerfile
+    build: 
+      context: ./backend_ai
+      dockerfile: Dockerfile
+    
+    # Ánh xạ cổng: Máy thật (8000) -> Docker (8000)
     ports:
-      - "5500:80"
+      - "8000:8000"
+    
+    # Quan trọng: Đồng bộ code từ máy bạn vào Docker theo thời gian thực
+    volumes:
+      - ./backend_ai:/app
+    
+    # Nạp biến môi trường từ file .env (Bảo mật API Key)
+    env_file:
+      - ./backend_ai/app:/.env
+    
+    # Tự động khởi động lại nếu bị lỗi
     restart: always
+    
+    # Kết nối mạng (để sau này App Expo truy cập được)
+    networks:
+      - app_network
+    
+    # HealCheck
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://192.168.110.89:8000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      
+networks:
+  app_network:
+    driver: bridge
