--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
@@ -20,14 +21,20 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.10",
     "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-modal": "^14.0.0-rc.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.76.0",
+    "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-ratings": "^8.1.0",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
+    "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
