--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,71 @@
 ﻿version: '3.8'
 
 services:
+  # ------------------------------------
+  # 1. Backend AI (Flask - Port 8000)
+  # ------------------------------------
   backend_ai:
-    # Đặt tên container cho dễ tìm
-    container_name: smartfood_ai_core
-    
-    # Chỉ đường dẫn đến thư mục chứa Dockerfile
-    build: 
-      context: ./backend_ai
-      dockerfile: Dockerfile
-    
-    # Ánh xạ cổng: Máy thật (8000) -> Docker (8000)
+    build:
+      context: .                  # Build từ Root
+      dockerfile: app/backend_ai/Dockerfile
+    container_name: s2o_backend_ai
     ports:
       - "8000:8000"
-    
-    # Quan trọng: Đồng bộ code từ máy bạn vào Docker theo thời gian thực
-    volumes:
-      - ./backend_ai:/app
-    
-    # Nạp biến môi trường từ file .env (Bảo mật API Key)
+    environment:
+      - PORT=8000
     env_file:
-      - ./backend_ai/app:/.env
-    
-    # Tự động khởi động lại nếu bị lỗi
-    restart: always
-    
-    # Kết nối mạng (để sau này App Expo truy cập được)
+      - ./app/backend_ai/.env
     networks:
-      - app_network
-    
-    # HealCheck
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://192.168.110.89:8000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      
+      - s2o_network
+
+  # ------------------------------------
+  # 2. Web Guest (FastAPI - Port 5000)
+  # ------------------------------------
+  web_guest:
+    build:
+      context: .                  # Build từ Root
+      dockerfile: Web_guest/Dockerfile
+    container_name: s2o_web_guest
+    ports:
+      - "5000:5000"
+    environment:
+      - PORT=5000
+    env_file:
+      - ./Web_guest/.env          # Đảm bảo file này tồn tại hoặc dùng chung env
+    networks:
+      - s2o_network
+
+  # ------------------------------------
+  # 3. Expo App (Web - Port 8081)
+  # ------------------------------------
+  expo_app:
+    build: ./app                  # Build từ folder app
+    container_name: s2o_expo
+    ports:
+      - "8081:8081"
+      - "19000-19006:19000-19006"
+    environment:
+      - CI=1
+    volumes:
+      - ./app:/app
+      - /app/node_modules
+    networks:
+      - s2o_network
+
+  # ------------------------------------
+  # 4. Admin Web (Nginx - Port 8888)
+  # ------------------------------------
+  static_web:
+    image: nginx:alpine
+    container_name: s2o_static_web
+    ports:
+      - "8888:80"                 # Map port 8888 ra ngoài
+    volumes:
+      - ./:/usr/share/nginx/html  # Mount toàn bộ project vào
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - s2o_network
+
 networks:
-  app_network:
+  s2o_network:
     driver: bridge
