--- a/Web_guest/Dockerfile
+++ b/Web_guest/Dockerfile
@@ -1,18 +1,11 @@
-﻿# Web_guest/Dockerfile
-FROM python:3.9-slim
+﻿FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY Web_guest/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy code của Web_guest
 COPY . .
 
-# Tạo thư mục static để tránh lỗi
-RUN mkdir -p static
-
-EXPOSE 5000
-
-# Chạy FastAPI
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
+# Render tự động gán port qua biến môi trường $PORT, mặc định là 10000 hoặc bạn có thể chỉnh 5000
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-5000}"]
