--- a/Web_guest/Dockerfile
+++ b/Web_guest/Dockerfile
@@ -2,10 +2,13 @@
 
 WORKDIR /app
 
+# CHÚ Ý: Không dùng Web_guest/ ở đây vì Root Directory đã là Web_guest rồi
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy toàn bộ file đang có trong thư mục Web_guest vào container
 COPY . .
 
-# Render tự động gán port qua biến môi trường $PORT, mặc định là 10000 hoặc bạn có thể chỉnh 5000
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-5000}"]
+# Chạy ứng dụng bằng uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
