--- a/app/backend_ai/requirements.txt
+++ b/app/backend_ai/requirements.txt
@@ -1,8 +1,15 @@
-﻿Flask
-Flask-Cors
+﻿fastapi
+uvicorn
+pydantic
 python-dotenv
 supabase
 groq
 requests
+httpx
+Flask
+Flask-Cors
 gunicorn
-uvicorn
+asgiref
+
+
+
